--- a/demo/index.html
+++ b/demo/index.html
@@ -21,8 +21,8 @@
       <demo-snippet>
         <template>
           <form-fire>
-                First name: <input type="text" name="fname" id="input-fire"><br>
-                Last name: <input type="text" name="lname" id="input-fire"><br>
+                First name: <input type="text" name="fname" class="input-fire"><br>
+                Last name: <input type="text" name="lname" class="input-fire"><br>
           </form-fire>
         </template>
       </demo-snippet>
