connect to firebase

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,10 +20,20 @@
       <h3>Basic form-fire demo</h3>
       <demo-snippet>
         <template>
-          <form-fire>
+        
+        <firebase-app
+            name="formFireDemo"
+            api-key="AIzaSyAhoCXxkY-ffNwA_7L7HIwBVpASYj1btNE"
+            auth-domain="convoo-login-demo.firebaseapp.com"
+            database-url="https://convoo-login-demo.firebaseio.com">
+        </firebase-app>
+
+        <form-fire path="/formfire/test" app-name="formFireDemo">
                 First name: <input type="text" name="fname" class="input-fire" value="Jim"><br>
                 Last name: <input type="text" name="lname" class="input-fire" value="Jones"><br>
-          </form-fire>
+        </form-fire>
+
+
         </template>
       </demo-snippet>
     </div>
