--- a/demo/index.html
+++ b/demo/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
+    <title>form-fire demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-
-    <title>form-fire demo</title>
-
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+
     <link rel="import" href="../form-fire.html">
+    <link rel="import" href="../../polymerfire/firebase-app.html">
 
     <style is="custom-style" include="demo-pages-shared-styles">
     </style>
@@ -28,7 +28,7 @@
             database-url="https://convoo-login-demo.firebaseio.com">
         </firebase-app>
 
-        <form-fire path="/formfire/test" app-name="formFireDemo">
+        <form-fire path="/test" app-name="formFireDemo">
                 First name: <input type="text" name="fname" class="input-fire" value="Jim"><br>
                 Last name: <input type="text" name="lname" class="input-fire" value="Jones"><br>
         </form-fire>
