tidy up variables

--- a/form-fire.html
+++ b/form-fire.html
@@ -47,11 +47,9 @@ Polymer({
         this.nodes = Polymer.dom(this).children;
         for (var i = 0; i < this.nodes.length; i++) {
             if (this.nodes[i].value && this.nodes[i].name){
-                var myObj = new Object;
-                var name = this.nodes[i].name;
-                var value = this.nodes[i].value;
-                myObj[name] = value;
-                this.$.form.ref.update(myObj);
+                var input = new Object;
+                input[this.nodes[i].name] = this.nodes[i].value;
+                this.$.form.ref.update(input);
             }
         }
     },
