--- a/demo/index.html
+++ b/demo/index.html
@@ -31,6 +31,7 @@
         <form-fire path="/test" app-name="formFireDemo">
                 First name: <input type="text" name="fname" class="input-fire" value="Jim"><br>
                 Last name: <input type="text" name="lname" class="input-fire" value="Jones"><br>
+                <input type="submit" value="Submit">
         </form-fire>
 
 
