--- a/demo/index.html
+++ b/demo/index.html
@@ -29,8 +29,8 @@
         </firebase-app>
 
         <form-fire path="/test" app-name="formFireDemo">
-                First name: <input type="text" name="fname" class="input-fire" value="Jim"><br>
-                Last name: <input type="text" name="lname" class="input-fire" value="Jones"><br>
+                First name: <input type="text" name="fname" id="fname" value="1"><br>
+                Last name: <input type="text" name="lname"><br>
                 <input type="submit" value="Submit">
         </form-fire>
 
