--- a/demo/index.html
+++ b/demo/index.html
@@ -29,9 +29,9 @@
         </firebase-app>
 
         <form-fire path="/test" app-name="formFireDemo">
-                First name: <input type="text" name="fname" id="fname" value="1"><br>
+                First name: <input type="text" name="fname"><br>
                 Last name: <input type="text" name="lname"><br>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Save">
         </form-fire>
 
 
